--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,48 +2,53 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-:root{
-    --white:#fff;
-    --background:#f2f3f5;
-    --gray-line: #DCDDE0;
-    --text: #666666;
-    --text-highlight: #b3b9ff;
-    --title: #2e384d;
-    --red: #e83f5b;
-    --green: #4cd62b;
-    --blue: #5965e0;
-    --blue-dark:#4953b8;
-    --blue-twitter:#2aa9e0;
-}
-
-@media(max-width: 1080px){
-    html{
-        font-size: 93.75%;
+  }
+  
+  :root {
+    --white: #fff;
+    --background: #f2f3f5;
+    --gray-line: #dcdde0;
+    --text: #666;
+    --text-highlight: #8fd0ec;
+    --title: #082836;
+    --red: #d81f45;
+    --green: #a1d81f;
+    --blue: #30c1ff;
+    --blue-dark: #1fa1d8;
+    --blue-twitter: #2aa9e0;
+  }
+  
+  @media (max-width: 1080px) {
+    html {
+      font-size: 93.75%;
     }
-}
-
-@media(max-width: 720px){
-    html{
-        font-size: 87.5%;
+  }
+  
+  @media (max-width: 720px) {
+    html {
+      font-size: 87.5%;
     }
-}
-
-body {
+  }
+  
+  body {
+    min-width: 420px;
     background: var(--background);
     color: var(--text);
-}
-
-body, input, textarea, button {
-    font: 400 16px "Inter", sans-serif;
-}
-
-button {
+  }
+  
+  body,
+  input,
+  select,
+  textarea,
+  button {
+    font: 400 1rem 'Montserrat', sans-serif;
+  }
+  
+  button {
     cursor: pointer;
-}
-
-a {
+  }
+  
+  a {
     color: inherit;
     text-decoration: none;
-}
+  }
