--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -3,14 +3,23 @@
     max-width: 992px;
     margin: 0 auto;
     padding: 2.5rem 2rem;
+  
     display: flex;
     flex-direction: column;
-}
-
-.container section {
+  }
+  
+  .container section {
     flex: 1;
+  
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 6.25rem;
     align-content: center;
-}
+  }
+  
+  @media (max-width: 768px) {
+    .container section {
+      grid-template-columns: 1fr;
+      padding: 5rem 0 3rem;
+    }
+  }
